fixed cut off box shadow

--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -36,7 +36,8 @@
         }
 
         work-container {
-            margin: 60px 0;
+            margin: 40px 0;
+            padding: 10px 0;
 
             display: flex;
             flex-direction: row;
